objects/ASI_CRM_DAMD_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRVN</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Non contracted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT(ASI_CRM_Image_Level__r.ASI_CRM_SG_Name__c)</formula>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Image Level</label>
        <referenceTo>ASI_CRM_Image_Level__c</referenceTo>
        <relationshipLabel>DAMD Thresholds</relationshipLabel>
        <relationshipName>DAMD_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Outlet_Prioritization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Prioritization</label>
        <referenceTo>ASI_CRM_PROS_OutletPrioritization__c</referenceTo>
        <relationshipLabel>DAMD Thresholds</relationshipLabel>
        <relationshipName>DAMD_Thresholds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Action__c</fullName>
        <label>Action</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>DAMD Thresholds</relationshipLabel>
        <relationshipName>DAMD_Thresholds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Market_Share__c</fullName>
        <label>Market Share</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential_Name__c</fullName>
        <formula>TEXT(ASI_CRM_SG_Volume_Potential__r.ASI_CRM_SG_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Volume_Potential__c</fullName>
        <label>Volume Potential</label>
        <referenceTo>ASI_CRM_Volume_Potential__c</referenceTo>
        <relationshipLabel>DAMD Thresholds</relationshipLabel>
        <relationshipName>DAMD_Thresholds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visit Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DAMD Threshold</label>
    <listViews>
        <fullName>ASI_CRM_My_All_DAMD_GRADE_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Name__c</columns>
        <columns>ASI_CRM_SG_Action__c</columns>
        <columns>ASI_CRM_Visit_Duration__c</columns>
        <columns>ASI_CRM_SG_Min_Weight__c</columns>
        <columns>ASI_CRM_SG_Market_Share__c</columns>
        <columns>ASI_CRM_MY_Outlet_Prioritization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_DAMD_Threshold__c.ASI_CRM_MY_DAMD_GRADE</value>
        </filters>
        <label>All MY DAMD GRADE Thresholds</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_DAMD_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Group_Outlet_Type__c</columns>
        <columns>ASI_CRM_Contract_Status__c</columns>
        <columns>ASI_CRM_Image_Level__c</columns>
        <columns>ASI_CRM_Image_Level_Name__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential__c</columns>
        <columns>ASI_CRM_SG_Volume_Potential_Name__c</columns>
        <columns>ASI_CRM_SG_Action__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_DAMD_Threshold__c.ASI_CRM_VN_DAMD_Threshold</value>
        </filters>
        <label>All VN DAMD Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DAMD - {0000}</displayFormat>
        <label>DAMD Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAMD Thresholds</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_DAMD_GRADE</fullName>
        <active>true</active>
        <label>ASI CRM MY DAMD GRADE</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_DAMD_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM MY DAMD Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_DAMD_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM SG DAMD Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_DAMD_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM TH DAMD Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_DAMD_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM TW DAMD Threshold</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_DAMD_Threshold</fullName>
        <active>true</active>
        <label>ASI CRM VN DAMD Threshold</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>